[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cabin-temp-notif"
version = "1.1.4"
description = "Cabin temperature notification job"
dependencies = ["requests==2.33.1", "jobs-common"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["jobs/service_update"]

[tool.uv.sources]
jobs-common = { path = "../../common" }
